k8s-hl/microbe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbe
  namespace: microbe-hl-prod
  labels:
    app: microbe
spec:
  type: NodePort
  selector:
    app: microbe
  ports:
    - port: 8000
      targetPort: 8000
