k8s-hl/microbe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microbe-ingress
  namespace: microbe-hl-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: data.microbeproject.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbe
                port:
                  number: 8000
